recipe cautions hide on small screens to prevent image overlapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,4 +77,7 @@ body {
   .modal-dialog {
     max-width: 60vw;
   }
+  .recipe-cautions {
+    display: none;
+  }
 }
